Gjort om påmelding/avmelding til en post-request
Dette fikser csrf-muligheten ved påmelding/avmelding
fix #202

Også gjort sånn at påmeldingsknappen forsvinner etter at
påmeldingsfristen er ute.
fix #145

--- a/nablaweb/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/templates/bedpres/bedpres_detail.html
@@ -39,7 +39,7 @@
 {% block sidebar %}
 
 
-{% include "bedpres/includes/info.html" with event=bedpres %}
+{% include "events/includes/info.html" with event=bedpres %}
 
 {% include "content/includes/meta.html" with content=bedpres %}
 
