Flytter like-funksjonaliteten til en egen app
Like-funksjonaliteten er uavhengig av resten av tingene som lå i
accounts-appen. Så strukturen blir enklere med dette.

Det har også blitt skrevet en del tester sammen med instillinger som ble
brukt for å slippe å ha med hele alle de andre appene i
nablaweb under testing.

En del funksjonalitet har også blitt endret:
- Det er ikke lenger nødvendig med et content_type felt i alle modellene
som skal kunne likes, det fungerer nå med alle modeller. Fjerner derfor
også LikeMixin, slik at noen modeller i andre apper har blitt endret.
Dvs. fjernet content_type feltet.
- Det er nå nødvendig å bruke en POST-forespørsel sammen med en csrf-token
for å få lov til å like noe. Dette medfører også at man må ha javascript
på for å kunne like noe. De fleste har javascript på og for de som ikke
har det på så satser jeg på at de klarer seg uten "likes".
- Alle templater som trenger likes bruker nå en templatetag for i
stedet for å inkludere en annen template.

--- a/interactive/templates/interactive/advent_door_base.html
+++ b/interactive/templates/interactive/advent_door_base.html
@@ -1,5 +1,6 @@
 {% extends "interactive/advent_base.html" %}
 {% load markdown %}
+{% load like %}
 
 {% block title %}{{ door.number }}{% endblock %}
 
@@ -11,7 +12,7 @@
 {% endif %}
  
 <div class="text">
-    {% include "accounts/includes/like.html" with object=door%}
+    {% show_like_button_for door %}
     <p>
     {{ door.content|markdown:"unsafe" }}
     </p>
