Major revision of vote app
Removes requirement of filling entire STV ballot

Seemingly fixes the stv-alorithm

Move elgible check from vote to vote event

Implement backend for login vote

Checkin vote

Adds tests to votes and fixes issue found by tests

Adds test for checkin

Fix indentation

Cleans up the template and adds some new functionality to the client

Adds todos in vote view that must be fixed

Mostly done with API endpoints

Implements any identifier registration

Define future non-implemented test

Updates API to only use new endpoints

Live update votes via polling

Prettify checkin

Adds checked in test for add_vote

Minor changes to html

Adds checkin test for normal votes

Fix indent in voting_list.html

Remove some old TODO notes, fix some permissions

Adds live-updating vote page

Add live update site for voters

Minor updates

Begins to add tests of permissions for views

Adds a persistent test database to speed up tests

User --keepdb when running manage.db to use
the persistent db

Adds permission tests for views

Implements both preference and radio vote

Hide preference vote when voted

Adds method to check out all users

Not implemented frontend yet

Adds admin frontend option to disable/enable client polling

Adds counter of number of checked in users in admin

Adds test cases for preference vote

Activate CSRF tokens

Refactor some code from STV vote

Notify users when they are not logged in

Adds some sanity checks

Frontend support for preference vote

Adds naive fix to view

--- a/nablapps/vote/templates/vote/voting_detail.html
+++ b/nablapps/vote/templates/vote/voting_detail.html
@@ -49,6 +49,15 @@
     <div class="alert alert-primary" role="alert">
         Vinnere ikke beregnet
     </div>
+    {% if errors %}
+    <div class="alert alert-danger" role="alert">
+        <ul>
+        {% for error in errors %}
+            <li>{{ error }}</li>
+        {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
     {% endif %}
 {# Kan eventuelt legge til en else som viser vinneren i envinneravstemning også #}
 {% endif %}
