Activate CSRF tokens

--- a/nablapps/vote/templates/vote/voting_event_user_view.html
+++ b/nablapps/vote/templates/vote/voting_event_user_view.html
@@ -120,6 +120,8 @@
         </span>
     </template>
     <script>
+     axios.defaults.xsrfCookieName = 'csrftoken'
+     axios.defaults.xsrfHeaderName = "X-CSRFTOKEN"
      const PrioritySelect = {
          delimiters: ['[[', ']]'],
          template: '#pri-select-template',
