--- a/nablapps/vote/templates/vote/register_attendance2.html
+++ b/nablapps/vote/templates/vote/register_attendance2.html
@@ -32,6 +32,8 @@
         </div>
     </template>
     <script>
+     axios.defaults.xsrfCookieName = 'csrftoken'
+     axios.defaults.xsrfHeaderName = "X-CSRFTOKEN"
      const usersAPIURL = "/stem/api/{{ object.pk }}/users/"  // TODO: make this dynamic
      const UserItem = {
          delimiters: ['[[', ']]'],
@@ -77,7 +79,10 @@
                      .then(response => {
                          this.users = response.data.users
                      })
-                 // TODO: error handling
+		             .catch(error => {
+		                 console.log(error)
+		                 alert("We are sorry, but an error occurred when communicating with the server. Refresh the page, or contact WebKom.")
+		             })
              },
              toggleUser(username, action = "toggle") {
                  axios
@@ -88,7 +93,10 @@
                          if (this.lastAction.error == null)
                              this.userIdentifier = null
                      })
-                 // TODO: error handling
+		             .catch(error => {
+		                 console.log(error)
+		                 alert("We are sorry, but an error occurred when communicating with the server. Refresh the page, or contact WebKom.")
+		             })
              }
          },
          computed: {
